--- a/index.html
+++ b/index.html
@@ -21,29 +21,32 @@
         </div>
     </div>
     <nav class="nav">
-        <div class="nav__logo"></div>
+        <a href="#header">
+            <div class="nav__logo"></div>
+        </a>
+
         <button class="nav__menu" aria-label="Open menu">
             <span></span>
             <span></span>
             <span></span>
         </button>
         <ul class="nav__list">
-            <li class="nav__item"><a href="#" class='nav__link' data-option='header'>home</a></li>
-            <li class="nav__item"><a href="#" class='nav__link' data-option='about'>over ons</a></li>
-            <li class="nav__item"><a href="#" class='nav__link' data-option='services'>diensten</a></li>
-            <li class="nav__item"><a href="#" class='nav__link' data-option='contact'>contact</a></li>
-            <li class="nav__item"><a href="tel:+31684481736" class='nav__link nav__link-mobile'><i class="nav__icon fas fa-mobile-alt"></i><span class="nav__icon-number">+31 684481736</span></a>
+            <li class="nav__item"><a href="#header" class='nav__link'>home</a></li>
+            <li class="nav__item"><a href="#about" class='nav__link'>over ons</a></li>
+            <li class="nav__item"><a href="#services" class='nav__link'>diensten</a></li>
+            <li class="nav__item"><a href="#contact" class='nav__link''>contact</a></li>
+            <li class="nav__item"><a href="tel:+31684481736" class=' nav__link nav__link-mobile'><i class="nav__icon fas fa-mobile-alt"></i></a>
             </li>
         </ul>
     </nav>
-    <header class="header">
+    <header id="header" class="header">
         <img src="img/header-background.webp" alt="Smiling cleaner with work accessories" class="header__hero">
         <h1 class="header__title">Schoonmaakdiensten <span class="header__title--color">op het hoogste niveau</span>
         </h1>
         <p class="header__text">leer ons beter kennen</p>
-        <button class="btn">Bekijk meer</button>
+        <a href="#about" class="btn">Bekijk meer</a>
     </header>
-    <section class="about">
+    <section id="about" class="about">
         <div class="about__nav">over ons</div>
         <h2 class="about__heading">Wij zorgen voor een <span class="about__heading--color">uitgebreide schoonmaak</span>
             van kantoren en bedrijfspanden.</h2>
@@ -54,7 +57,7 @@
             elke dag schoon is!</p>
         <img src="img/aboutus-bg.jpg" alt="Cleaning the sink" class="about__photo">
     </section>
-    <main class="services">
+    <main id="services" class="services">
         <h2 class="services__heading"><span class="services__heading--color">Onze</span> diensten</h2>
         <p class="services__describtion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint veritatis,
             similique porro ea enim quis quibusdam voluptatum corporis sapiente quia.
@@ -111,7 +114,7 @@
             </div>
         </div>
     </section>
-    <div class="contact">
+    <div id="contact" class="contact">
         <div class="contact__wrapper">
             <p class="contact__heading">Heb je nog vragen?
                 Bel ons :)
