--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         <a href="#header">
             <div class="nav__logo"></div>
         </a>
-
         <button class="nav__menu" aria-label="Open menu">
             <span></span>
             <span></span>
@@ -35,7 +34,7 @@
             <li class="nav__item"><a href="#about" class='nav__link'>over ons</a></li>
             <li class="nav__item"><a href="#services" class='nav__link'>diensten</a></li>
             <li class="nav__item"><a href="#contact" class='nav__link''>contact</a></li>
-            <li class="nav__item"><a href="tel:+31684481736" class=' nav__link nav__link-mobile'><i class="nav__icon fas fa-mobile-alt"></i></a>
+            <li class="nav__item"><a href="tel:+31684481736" class=' nav__link'><i class="nav__icon fas fa-mobile-alt"></i></a>
             </li>
         </ul>
     </nav>
