refactor: about section

--- a/index.html
+++ b/index.html
@@ -47,14 +47,16 @@
     </header>
     <section id="about" class="about">
         <div class="about__nav">over ons</div>
-        <h2 class="about__heading">Wij zorgen voor een <span class="about__heading--color">uitgebreide schoonmaak</span>
-            van kantoren en bedrijfspanden.</h2>
-        <p class="about__text">Een professioneel kantoorreinigingsbedrijf zorgt ervoor dat u zich nooit zorgen hoeft te
-            maken over het omgaan met de chaos die gepaard gaat met wanorde. Bedenk dat een schone en opgeruimde
-            werkplek bijdraagt ​​aan meer efficiëntie en effectiviteit! Zorg er nu voor dat u uw klanten altijd
-            zorgeloos kunt ontvangen, zonder na te denken of het kantoor netjes is. Wij zorgen ervoor dat uw bedrijf
-            elke dag schoon is!</p>
         <img src="img/aboutus-bg.jpg" alt="Cleaning the sink" class="about__photo">
+        <div class="about__text-container">
+            <h2 class="about__heading">Wij zorgen voor een <span class="about__heading--color">uitgebreide schoonmaak</span>
+                van kantoren en bedrijfspanden.</h2>
+            <p class="about__text">Een professioneel kantoorreinigingsbedrijf zorgt ervoor dat u zich nooit zorgen hoeft te
+                maken over het omgaan met de chaos die gepaard gaat met wanorde. Bedenk dat een schone en opgeruimde
+                werkplek bijdraagt ​​aan meer efficiëntie en effectiviteit! Zorg er nu voor dat u uw klanten altijd
+                zorgeloos kunt ontvangen, zonder na te denken of het kantoor netjes is. Wij zorgen ervoor dat uw bedrijf
+                elke dag schoon is!</p>
+        </div>
     </section>
     <main id="services" class="services">
         <h2 class="services__heading"><span class="services__heading--color">Onze</span> diensten</h2>
