--- a/index.html
+++ b/index.html
@@ -60,13 +60,11 @@
     </section>
     <main id="services" class="services">
         <h2 class="services__heading"><span class="services__heading--color">Onze</span> diensten</h2>
-        <p class="services__describtion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint veritatis,
-            similique porro ea enim quis quibusdam voluptatum corporis sapiente quia.
-        </p>
+
         <div class="services__wrapper">
             <div class="services__item services__item-1 lazy-background">
                 <div class="services__item-wrapper">
-                    <h3 class="services__title">Schoonmaken van kantoren</h3>
+                    <h3 class="services__title">Schoonmaken van kantoorpanden</h3>
                     <p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio impedit
                         deserunt expedita illo minus totam.</p>
                     <button class="services__btn">Bekijk meer</button>
