refactor: contact section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
     </section>
     <main id="services" class="services">
         <h2 class="services__heading"><span class="services__heading--color">Onze</span> diensten</h2>
-
         <div class="services__wrapper">
             <div class="services__item services__item-1 lazy-background">
                 <div class="services__item-wrapper">
@@ -115,7 +114,7 @@
     </section>
     <div id="contact" class="contact">
         <div class="contact__wrapper">
-            <p class="contact__heading">Heb je nog vragen?
+            <p class="contact__heading">Heb je nog vragen?<br>
                 Bel ons :)
             </p>
             <a href="tel:+31684481736" class="contact__phone"><i class="contact__icon fas fa-mobile-alt"></i>
@@ -132,7 +131,7 @@
             <input type="email" id="mail" class="contact__input" placeholder="email" required>
             <label for="message" class="contact__label">Jouw bericht:</label>
             <textarea id="message" class="contact__textarea" placeholder="bericht" required></textarea>
-            <input type="submit" value="Sturen" class=" contact__btn">
+            <input type="submit" value="Sturen" class="contact__btn">
         </form>
     </div>
     <div class='opinions lazy-background'>
