--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <main id="services" class="services">
         <h2 class="services__heading"><span class="services__heading--color">Onze</span> diensten</h2>
         <div class="services__wrapper">
-            <div class="services__item services__item-1 lazy-background">
+            <div class="services__item services__item-1 ">
                 <div class="services__item-wrapper">
                     <h3 class="services__title">Schoonmaken van kantoorpanden</h3>
                     <p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio impedit
@@ -69,7 +69,7 @@
                     <button class="services__btn">Bekijk meer</button>
                 </div>
             </div>
-            <div class="services__item services__item-2 lazy-background">
+            <div class="services__item services__item-2 ">
                 <div class="services__item-wrapper">
                     <h3 class="services__title">Schoonmaak van restaurants en kantines</h3>
                     <p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio impedit
@@ -77,7 +77,7 @@
                     <button class="services__btn">Bekijk meer</button>
                 </div>
             </div>
-            <div class="services__item services__item-3 lazy-background">
+            <div class="services__item services__item-3 ">
                 <div class="services__item-wrapper">
                     <h3 class="services__title">Schoonmaken van huizen en apartamenten</h3>
                     <p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio impedit
@@ -134,7 +134,7 @@
             <input type="submit" value="Sturen" class="contact__btn">
         </form>
     </div>
-    <div class='opinions lazy-background'>
+    <div class='opinions'>
         <div class="opinions__wrapper">
             <p class="opinions__opinion"></p>
             <button class="opinions__arrow opinions__arrow-left" data-direction="left" aria-label="Previous opinion"></button>
@@ -155,7 +155,7 @@
         </div>
         <p class="footer__signature">copyright &copy; 2020 leezon`</p>
     </footer>
-    <script src="js/lazyLoad.js"></script>
+
     <script src="js/preloader.js"></script>
     <script src="js/navigation.js"></script>
     <script src="js/animations.js"></script>
